--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -212,6 +212,10 @@ a:hover {
   margin: 0px;
 }
 
+.bar-search {
+  margin: 3.25px;
+}
+
 /*.bar-side:last-child {
   color: red;
   border-right: 0px;
