--- a/app/views/preaching/_new_form.html.erb
+++ b/app/views/preaching/_new_form.html.erb
@@ -16,7 +16,7 @@
               </div>
               <div class="form-group">
                 <%= f.label :preacher %>
-                <%= f.text_field :preacher, class: "form-control", type: "text", placeholder: "Preacher" %>
+                <%= f.text_field :preacher, class: "form-control", type: "text", placeholder: "Preacher", value: "Pastor Anderson" %>
               </div>
               <div class="form-group">
                 <%= f.label :mp3 %>
@@ -34,7 +34,7 @@
               </div>
               <div class="form-group">
                 <%= f.label :location %>
-                <%= f.text_field :location, class: "form-control", type: "text", placeholder: "Location" %>
+                <%= f.text_field :location, class: "form-control", type: "text", placeholder: "Location", value: "Faithful Word Baptist Church" %>
               </div>
               <div class="form-group">
                 <%= f.label :format %>
