--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,14 @@
 <footer>
-  <div class="container">
-    <hr>
+  <hr>
     <div class="row">
-      <div class="col">
-        <p>Faithful Word Baptist Church 2017<br><%= link_to "Privacy Policy / Terms and Conditions", privacyandterms_path %></p>
-      </div>
-      <div class="col">
-        <p class="text-right">Phone: (602) 456-1049<br>E-mail: <%= mail_to "faithfulword1@gmail.com" %></p>
-      </div>
+    <div class="col">
+      <p class="mb-0">Faithful Word Baptist Church 2017</p>
+      <p><%= link_to "Privacy Policy / Terms and Conditions", privacyandterms_path %></p>
+    </div>
+    <div class="col">
+      <p class="text-right mb-0">Phone: (602) 456-1049</p>
+      <p class="text-right mb-0">E-mail: <%= mail_to "faithfulword1@gmail.com" %></p>
+      <p class="text-right">Video by <%= link_to 'Framing the World', 'http://www.framingtheworld.com/', target: '_blank' %></p>
     </div>
   </div>
 </footer>
