--- a/app/views/pages/audiobible.html.erb
+++ b/app/views/pages/audiobible.html.erb
@@ -2,7 +2,7 @@
 <%= render "shared/banner" %>
 <div class="d-flex flex-nowrap">
   <%= render "shared/side-bar" %>
-  <div class="c">
+  <div>
     <h4>Audio Bible <span class="badge badge-warning">NEW</span></h4>
       <p>This is a work in progress. Check back for more chapters of the Bible being constantly added!</p>
       <div class="pb-4">
