--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,12 +1,12 @@
 <% provide(:title, "Events") %>
-<%= render "shared/banner" %>
+<%= render 'new_form' %>
+<%= render 'shared/banner' %>
 <h4>Events at Faithful Word Baptist Church</h4>
 <p>
   Please note: <b>All</b> activities are <b>always</b> free of charge, including food, prizes, supplies, etc. Please feel free to invite family and friends to any church-sponsored activity!
 </p>
 <p>Upcoming 2017 Events</p>
 <button type="button" class="sky-btn" data-toggle="modal" data-target="#exampleModal">New Event</button>
-<%= render 'form' %>
 <div id="container-event">
   <%= render @events %>
 </div>
