--- a/app/views/pages/soulwinning.html.erb
+++ b/app/views/pages/soulwinning.html.erb
@@ -7,11 +7,10 @@
   <p>Proverbs 11:30</p>
 </blockquote>
 
-<div class="row">
-  
+<div class="row mb-2">
   <div class="col-4">
     <div class="soulwinning-table">
-      <strong class="h5">Official Soul-Winning Times</strong>
+      <strong>Official Soul-Winning Times</strong>
       <div class="soulwinning-body mb-2 <%= "active" if Time.zone.now.tuesday? %>">
         <p class="soulwinning-date">Tuesday (Jonathan Shelley)</p>
         <p class="soulwinning-time">5:15 PM</p>
@@ -30,10 +29,9 @@
       </div>
     </div>
   </div>
-  
   <div class="col-4">
     <div class="soulwinning-table">
-      <strong class="h5">Regional Soul-Winning Groups</strong>
+      <strong>Regional Soul-Winning Groups</strong>
       <div class="soulwinning-body mb-2 <%= "active" if Time.zone.now.monday? %>">
         <p class="soulwinning-date">Monday (Tyler Baker)</p>
         <p class="soulwinning-time">6:30 PM Tempe</p>
@@ -52,10 +50,9 @@
       </div>
     </div>
   </div>
-  
   <div class="col-4">
     <div class="soulwinning-table">
-      <strong class="h5">North Phoenix Soul-Winning</strong>
+      <strong>North Phoenix Soul-Winning</strong>
       <div class="soulwinning-body mb-2 <%= "active" if Time.zone.now.thursday? %>">
         <p class="soulwinning-date">Thursday (Jonathan Shelley)</p>
         <p class="soulwinning-time">5:15 PM</p>
@@ -66,7 +63,6 @@
       </div>
     </div>
   </div>
-  
 </div>
 
 <h4>Small Town Soul-Winning Program</h4>
