--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -8,5 +8,5 @@
 <p>Upcoming 2017 Events</p>
 <button type="button" class="sky-btn" data-toggle="modal" data-target="#exampleModal">New Event</button>
 <div id="container-event">
-  <%= render @events %>
+  <%= render partial: @events, spacer_template: 'event_spacer' %>
 </div>
