--- a/app/views/pages/churchdirectory.html.erb
+++ b/app/views/pages/churchdirectory.html.erb
@@ -1,5 +1,4 @@
 <% provide(:title, "Church Directory") %>
-<%= render "shared/banner" %>
 <div class="d-flex flex-nowrap">
   <%= render "shared/side-bar" %>
   <div>
@@ -19,7 +18,7 @@
         4. <b>Physically attend</b> (not call) all the soul-winning churches in your area until you decide on the best one.
       </p>
     <h4>List of a few outstanding churches here:</h4>
-    <div class="d-flex justify-content-between flex-wrap">
+    <div class="d-flex flex-wrap">
       <div class="church-table">
         <strong>Faithful Word Baptist Church</strong>
         <div class="church-body">
