--- a/app/views/pages/privacyandterms.html.erb
+++ b/app/views/pages/privacyandterms.html.erb
@@ -1,12 +1,10 @@
 <% provide(:title, "Privacy Policy") %>
-<%= render "shared/banner" %>
 <div class="d-flex flex-nowrap">
-  <%= render "shared/side-bar" %>
   <div>
     <h4>Make a donation to Faithful Word Baptist Church!</h4>
     <a class="sky-btn" href="https://www.truebornsons.com/donate-to-fwbc/" role="button">DONATE NOW &rsaquo;</a>
     <hr>
-    <ul class="nav nav-tabs" role="tablist">
+    <ul class="nav nav-tabs">
       <li class="nav-item">
         <a class="nav-link active" data-toggle="tab" href="#pp" role="tab">Privacy Policy</a>
       </li>
