--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,1 +1,1 @@
-<%= image_tag "GROUP_SHOT_2048x529.jpg", width: '100%', height: 'auto', alt: "Faithful Word Baptist Church", class: "mb-2" %>
+<%= image_tag "GROUP_SHOT_2048x529.jpg", width: '100%', height: 'auto', alt: "Faithful Word Baptist Church" %>
