--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -1,4 +1,4 @@
-<div id="carouselExampleIndicators" class="carousel slide mb-2" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active ">
       <%= image_tag "hard-preaching.jpg", alt: "First slide", class: "d-block img-fluid" %>
