--- a/app/views/preaching/index.html.erb
+++ b/app/views/preaching/index.html.erb
@@ -1,12 +1,14 @@
 <% provide(:title, "Preaching") %>
 <%= render 'new_form' %>
-<%= render "shared/banner" %>
 <h4>Sermons from Faithful Word Baptist Church</h4>
 <p>
   Are you tired of boring preaching? Check back in the future for more independent, fundamental, King James Bible Only Baptist preaching.
 </p>
-<%= link_to 'DONATE NOW', 'https://www.truebornsons.com/donate-to-fwbc/', class: "sky-btn mb-2" %>
-<button type="button" class="sky-btn mb-2" data-toggle="modal" data-target="#exampleModal">Upload Sermon</button>
+<h5><%= number_with_delimiter(@total_dl + 13000000) %> Sermons Downloaded</h5>
+<div class="mb-2">
+  <%= link_to 'DONATE NOW', 'https://www.truebornsons.com/donate-to-fwbc/', class: "sky-btn" %>
+  <button type="button" class="sky-btn" data-toggle="modal" data-target="#exampleModal">Upload Sermon</button>
+</div>
 <div class="d-flex flex-row">
   
   <div class="mr-auto">
